La til støtte for distroless convention + tok den i bruk i key-maintenance(dev)