@@ -3,13 +3,10 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 plugins {
     kotlin("jvm")
     application
-    id("com.google.cloud.tools.jib")
+    id("jib-distroless")
 }
 
-val baseImage: String by project
 val jvmMajorVersion: String by project
-
-val image: String? by project
 
 dependencies {
     implementation(project(":domain:interne-hendelser"))
@@ -87,17 +84,6 @@ application {
 tasks.withType<KotlinCompile>().configureEach {
     compilerOptions {
         allWarningsAsErrors = true
-    }
-}
-
-jib {
-    from.image = "$baseImage:$jvmMajorVersion"
-    to.image = "${image ?: project.name}:${project.version}"
-    container {
-        jvmFlags = listOf("-XX:ActiveProcessorCount=4", "-XX:+UseZGC", "-XX:+ZGenerational")
-        environment = mapOf(
-            "IMAGE_WITH_VERSION" to "${image ?: project.name}:${project.version}"
-        )
     }
 }
 
